<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Contacts</string>
    <string name="keypab">Keypad</string>
    <string name="history">History</string>
    <string name="contacts">Contacts</string>
    <string name="del">x</string>
    <string name="keypad">Keypad</string>
    <string name="add">+</string>
    <string name="buttonlogin">Sign In</string>
    <string name="labeladdnew">Add new</string>
    <string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="savesmart">Save to smart contacts</string>
	<string name="status">1</string>
	<string name="teacher">Instructors: Tieu Kim Cuong</string>
	<string name="student">Team: Group Seven</string>
	<string name="school">TDC</string>
	
	
	</resources>