<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/tabtextsize"
        android:textColor="@color/colorwhite"
        android:background="@color/tabbackground"
        android:padding="@dimen/marginbtn"
        android:text="@string/labeladdnew" />
    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginbtn"
        android:padding="@dimen/paddigndedittext"
        android:maxLines="1"
        android:hint="Name" />
    <EditText
        android:id="@+id/txtPhonenumber"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/marginbtn"
        android:padding="@dimen/paddigndedittext"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="number"
        android:hint="Phonenumber" />
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:padding="@dimen/paddigndedittext"
        android:layout_margin="@dimen/marginbtn"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="Email" />
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorwhite"
        android:background="@color/tabbackground"
        android:layout_margin="@dimen/marginbtn"
        android:text="@string/cancel" />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/marginbtn"
        android:textColor="@color/colorwhite"
        android:background="@color/tabbackground"
        android:text="@string/save" />
    </LinearLayout>

    
</LinearLayout>